[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/voxilent.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Images/nine_rect.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/progress/over.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/progress/under.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/progress/progress.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/ball.png" type="Texture" id=6]
[ext_resource path="res://Themes/themeMenu.tres" type="Theme" id=7]
[ext_resource path="res://Scripts/UpgradeNode.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="UpgradeNode" type="Control"]
margin_right = 1072.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
theme = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
color = Color( 0.901961, 0.12549, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBackground" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 24
patch_margin_top = 23
patch_margin_right = 23
patch_margin_bottom = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texObject" type="TextureRect" parent="."]
anchor_right = 0.2
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
texture = ExtResource( 6 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labStat" type="Label" parent="."]
anchor_left = 0.2
anchor_right = 0.6
anchor_bottom = 0.5
margin_top = 40.0
custom_fonts/font = SubResource( 1 )
text = "DAMAGE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progLevel" type="TextureProgress" parent="."]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 1.0
margin_bottom = -40.0
value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnUpgrade" type="Button" parent="."]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnUpgrade" to="." method="_on_btnUpgrade_pressed"]
